<resources>
    <string name="app_name">WoFH</string>
    <string name="find_the_best_workout_that_suits_you">Find the Best Workout that Suits You!</string>
    <string name="please_sign_up_nto_join_us">Please sign up\nto join us</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="hello_there">Hello, There!</string>
    <string name="statistic">Statistic</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="my_body">My Body</string>
    <string name="calculate_your_body_mass_index_bmi">Calculate your Body Mass Index (BMI)</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="height_cm">Height (Cm)</string>
    <string name="calculate">Calculate</string>
    <string name="bmi">BMI : %f</string>
    <string name="status">Status : %s</string>
    <string name="let_s_build_ideal_weight_for_your_body">Let\'s build ideal weight for your body :)</string>
    <string name="kg">Kg</string>
    <string name="current">Current</string>
    <string name="goal">Goal</string>
    <string name="edit">Edit</string>
    <string name="edit_statistic">Edit Statistic</string>
    <string name="current_weight_kg">Current Weight (Kg)</string>
    <string name="current_height_cm">Current Height (Cm)</string>
    <string name="set_your_data_to_help_statistic_your_body">Set your data to help statistic your body</string>
    <string name="goal_weight_kg">Goal Weight (Kg)</string>
    <string name="home_title">Let’s Find The Best Workout That Suits You!</string>
    <string name="all">All</string>
    <string name="bulk">Bulk</string>
    <string name="cut">Cut</string>
    <string name="recomp">Recomp</string>
    <string name="diet">Diet</string>
</resources>