<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    tools:context=".fragment.HomeFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/home_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/list_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_all"
            android:checked="true"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textAlignment="center"
            android:textColor="@color/chip_text"
            app:chipBackgroundColor="@color/chip_background"
            style="@style/Widget.MaterialComponents.Chip.Choice"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_bulk"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/bulk"
            android:textColor="@color/chip_text"
            app:chipBackgroundColor="@color/chip_background"
            style="@style/Widget.MaterialComponents.Chip.Choice"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_cut"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/cut"
            android:textColor="@color/chip_text"
            app:chipBackgroundColor="@color/chip_background"
            style="@style/Widget.MaterialComponents.Chip.Choice"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_recomp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/recomp"
            android:textColor="@color/chip_text"
            app:chipBackgroundColor="@color/chip_background"
            style="@style/Widget.MaterialComponents.Chip.Choice"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_diet"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/diet"
            android:textColor="@color/chip_text"
            app:chipBackgroundColor="@color/chip_background"
            style="@style/Widget.MaterialComponents.Chip.Choice"/>

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_activity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@+id/list_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/card_activity"/>

</androidx.constraintlayout.widget.ConstraintLayout>